[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Enemies/SmallBurger.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Enemies/SmallBurger-open.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemies/SmallBurger-closed.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Small_Burger.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.52124, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.46138, 8 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Normal",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "Angry",
"speed": 5.0
} ]

[node name="Small_Burger" type="KinematicBody2D"]
collision_layer = 6
collision_mask = 6
script = ExtResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.5, 0 )
frames = SubResource( 3 )
animation = "Normal"
playing = true

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Right" type="RayCast2D" parent="."]
position = Vector2( 10, 6 )
enabled = true
cast_to = Vector2( 0, 8 )
collision_mask = 4

[node name="Left" type="RayCast2D" parent="."]
position = Vector2( -10, 6 )
enabled = true
cast_to = Vector2( 0, 8 )
collision_mask = 4

[node name="RightWall" type="RayCast2D" parent="."]
position = Vector2( 5, 2 )
enabled = true
cast_to = Vector2( 8, 0 )
collision_mask = 4

[node name="LeftWall" type="RayCast2D" parent="."]
position = Vector2( -5, 2 )
enabled = true
cast_to = Vector2( -8, 0 )
collision_mask = 4

[node name="LeftView" type="RayCast2D" parent="."]
position = Vector2( -6, 2 )
enabled = true
cast_to = Vector2( -50, 0 )
collision_mask = 2

[node name="RightView" type="RayCast2D" parent="."]
position = Vector2( 6, 2 )
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 2

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Timer3" type="Timer" parent="."]
wait_time = 0.3
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
